--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">LoginScreen</string>
+    <string name="app_name">ParkingManager</string>
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
 </resources>
